add single weight simulation

--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -39,6 +39,7 @@ editor_options:
   * seven correlated tissues simulations [link](https://sq-96.github.io/multigroup_ctwas_analysis/simulation_seven_tissues_correlated.html)
   * seven correlated brain tissues simulations [link](https://sq-96.github.io/multigroup_ctwas_analysis/simulation_seven_brain_tissues_correlated.html)
   * E and S three tissues simulations [link](https://sq-96.github.io/multigroup_ctwas_analysis/simulation_E_S_three_tissues.html)
+  * Single weight simulations [link](https://sq-96.github.io/multigroup_ctwas_analysis/single_weight_simulations.html)
 
 # Region Merge
 
