--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -31,7 +31,7 @@ editor_options:
 
   * APA QTL analysis [link](https://sq-96.github.io/multigroup_ctwas_analysis/apa_weights_analysis.html)
   * histone QTL analysis [link](https://sq-96.github.io/multigroup_ctwas_analysis/histone_weights_analysis.html)
-
+  * APA QTL analysis (using APA FUSION models by Chen et al.)[link](https://sq-96.github.io/multigroup_ctwas_analysis/apa_weights_analysis_chenetal.html)
 
 # Simulation results
 
