--- a/analysis/four_expression_traits_simulations.Rmd
+++ b/analysis/four_expression_traits_simulations.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Single weight simulation"
+title: "Four expression traits simulation"
 author: "shengqian"
 date: "2024-5-6"
 output: workflowr::wflow_html
@@ -23,16 +23,16 @@ plot_PIP <- function(results_dir, runtag,  simutags, LD_type, ...){
    f1 <- caliPIP_plot_csindex(phenofs, susieIfs, ...) 
    return(f1)
 }
-plot_PIP_merged <- function(results_dir, runtag,  simutags, ...){
+plot_PIP_merged <- function(results_dir, runtag,  simutags, LD_type, ...){
    phenofs <- paste0(results_dir, runtag, "_simu", simutags, "-pheno.Rd")
-   susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_UKBBLD.finemap_regions.res.RDS")
+   susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_", LD_type,".finemap_merged_regions.res.RDS")
    f1 <- caliPIP_plot_csindex(phenofs, susieIfs, ...) 
    return(f1)
 }
 
-plot_PIP_combined_csindex <- function(configtag, runtag,  simutags, ...){
+plot_PIP_combined_csindex <- function(configtag, runtag,  simutags, LD_type, ...){
    phenofs <- paste0(results_dir, runtag, "_simu", simutags, "-pheno.Rd")
-   susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_UKBBLD.finemap_regions.res.RDS")
+   susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_", LD_type, ".finemap_regions.res.RDS")
    f1 <- caliPIP_plot_combined_csindex(phenofs, susieIfs, ...) 
    return(f1)
 }
@@ -60,7 +60,7 @@ check_n_detected_multi(results_dir, runtag, simutags, "UKBBLD", PIP_threshold = 
 ```
 
 ### Estimated Prior Inclusion Probability and PVE
-`````{r, fig.width= 8, fig.height= 4, message=FALSE, warning=FALSE, echo=FALSE}
+`````{r, fig.width= 12, fig.height= 4, message=FALSE, warning=FALSE, echo=FALSE}
 par(mfrow = c(1, 3))
 y1 <- param_GTEX_df$`prior_eQTL|Liver`
 y2 <- param_GTEX_df$`prior_eQTL|Adipose`
@@ -88,36 +88,50 @@ plot_par_4(truth,est,xlabels = c("Liver", "Adipose", "Lung", "Stomach"),ylim=c(0
 ```
 
 ### Estimated Prior Inclusion Probability and PVE
-`````{r, fig.width= 8, fig.height= 4, message=FALSE, warning=FALSE, echo=FALSE}
+`````{r, fig.width= 12, fig.height= 4, message=FALSE, warning=FALSE, echo=FALSE}
 par(mfrow = c(1, 3))
-y1 <- param_GTEX_df$`prior_eQTL|Liver`
-y2 <- param_GTEX_df$`prior_eQTL|Adipose`
-y3 <- param_GTEX_df$`prior_eQTL|Lung`
-y4 <- param_GTEX_df$`prior_eQTL|Stomach`
+y1 <- param_UKBB_df$`prior_eQTL|Liver`
+y2 <- param_UKBB_df$`prior_eQTL|Adipose`
+y3 <- param_UKBB_df$`prior_eQTL|Lung`
+y4 <- param_UKBB_df$`prior_eQTL|Stomach`
 truth <- rbind(c(1,0.009),c(2,0.009),c(3,0),c(4,0))
 est <- rbind(cbind(1,y1),cbind(2,y2), cbind(3,y4), cbind(4,y4))
 plot_par_4(truth,est,xlabels = c("Liver", "Adipose", "Lung", "Stomach"),ylim=c(0,0.025),ylab="Prior inclusion", main="Prior Inclusion Probability")
 
-y1 <- param_GTEX_df$`pve_eQTL|Liver`
-y2 <- param_GTEX_df$`pve_eQTL|Adipose`
-y3 <- param_GTEX_df$`pve_eQTL|Lung`
-y4 <- param_GTEX_df$`pve_eQTL|Stomach`
+y1 <- param_UKBB_df$`pve_eQTL|Liver`
+y2 <- param_UKBB_df$`pve_eQTL|Adipose`
+y3 <- param_UKBB_df$`pve_eQTL|Lung`
+y4 <- param_UKBB_df$`pve_eQTL|Stomach`
 truth <- rbind(c(1,0.03),c(2,0.03),c(3,0),c(4,0))
 est <- rbind(cbind(1,y1),cbind(2,y2), cbind(3,y4), cbind(4,y4))
 plot_par_4(truth,est,xlabels = c("Liver", "Adipose", "Lung", "Stomach"),ylim=c(0,0.06),ylab="PVE", main="PVE")
 
-y1 <- param_GTEX_df$`enrichment_eQTL|Liver`
-y2 <- param_GTEX_df$`enrichment_eQTL|Adipose`
-y3 <- param_GTEX_df$`enrichment_eQTL|Lung`
-y4 <- param_GTEX_df$`enrichment_eQTL|Stomach`
+y1 <- param_UKBB_df$`enrichment_eQTL|Liver`
+y2 <- param_UKBB_df$`enrichment_eQTL|Adipose`
+y3 <- param_UKBB_df$`enrichment_eQTL|Lung`
+y4 <- param_UKBB_df$`enrichment_eQTL|Stomach`
 truth <- rbind(c(1,36),c(2,36),c(3,0),c(4,0))
 est <- rbind(cbind(1,y1),cbind(2,y2), cbind(3,y4), cbind(4,y4))
 plot_par_4(truth,est,xlabels = c("Liver", "Adipose", "Lung", "Stomach"),ylim=c(0,60),ylab="Enrichment", main="Enrichment")
 ```
 
-### PIP Calibration Plot based on UKBB LD (filter out cs index 0)
+### PIP Calibration Plot of expression traits (filter out cs index 0)
 ```{r, fig.width= 8, fig.height= 4, echo=FALSE, warning=FALSE}
 f1 <- plot_PIP(results_dir, runtag, simutags, "GTEXLD", main = "GTEX LD")
 f2 <- plot_PIP(results_dir, runtag, simutags, "UKBBLD", main = "UKBB LD")
+gridExtra::grid.arrange(f1, f2, ncol =2)
+```
+
+### PIP Calibration Plot of expression traits with region merge (filter out cs index 0)
+```{r, fig.width= 8, fig.height= 4, echo=FALSE, warning=FALSE}
+f1 <- plot_PIP_merged(results_dir, runtag, simutags, "GTEXLD", main = "GTEX LD")
+f2 <- plot_PIP_merged(results_dir, runtag, simutags, "UKBBLD", main = "UKBB LD")
+gridExtra::grid.arrange(f1, f2, ncol =2)
+```
+
+### PIP Calibration Plot of gene level PIP (filter out cs index 0)
+```{r, fig.width= 8, fig.height= 4, echo=FALSE, warning=FALSE}
+f1 <- plot_PIP_combined_csindex(results_dir, runtag, simutags, "GTEXLD", main = "GTEX LD")
+f2 <- plot_PIP_combined_csindex(results_dir, runtag, simutags, "UKBBLD", main = "UKBB LD")
 gridExtra::grid.arrange(f1, f2, ncol =2)
 ```
