--- a/analysis/four_expression_traits_simulations.Rmd
+++ b/analysis/four_expression_traits_simulations.Rmd
@@ -59,7 +59,7 @@ check_n_detected_multi(results_dir, runtag, simutags, "GTEXLD", PIP_threshold = 
 check_n_detected_multi(results_dir, runtag, simutags, "UKBBLD", PIP_threshold = 0.8)
 ```
 
-### Estimated Prior Inclusion Probability and PVE
+### Estimated Prior Inclusion Probability and PVE (GTEX LD)
 `````{r, fig.width= 12, fig.height= 4, message=FALSE, warning=FALSE, echo=FALSE}
 par(mfrow = c(1, 3))
 y1 <- param_GTEX_df$`prior_eQTL|Liver`
@@ -84,10 +84,10 @@ y3 <- param_GTEX_df$`enrichment_eQTL|Lung`
 y4 <- param_GTEX_df$`enrichment_eQTL|Stomach`
 truth <- rbind(c(1,36),c(2,36),c(3,0),c(4,0))
 est <- rbind(cbind(1,y1),cbind(2,y2), cbind(3,y4), cbind(4,y4))
-plot_par_4(truth,est,xlabels = c("Liver", "Adipose", "Lung", "Stomach"),ylim=c(0,60),ylab="Enrichment", main="Enrichment")
+plot_par_4(truth,est,xlabels = c("Liver", "Adipose", "Lung", "Stomach"),ylim=c(0,80),ylab="Enrichment", main="Enrichment")
 ```
 
-### Estimated Prior Inclusion Probability and PVE
+### Estimated Prior Inclusion Probability and PVE (UKBB LD)
 `````{r, fig.width= 12, fig.height= 4, message=FALSE, warning=FALSE, echo=FALSE}
 par(mfrow = c(1, 3))
 y1 <- param_UKBB_df$`prior_eQTL|Liver`
@@ -112,7 +112,7 @@ y3 <- param_UKBB_df$`enrichment_eQTL|Lung`
 y4 <- param_UKBB_df$`enrichment_eQTL|Stomach`
 truth <- rbind(c(1,36),c(2,36),c(3,0),c(4,0))
 est <- rbind(cbind(1,y1),cbind(2,y2), cbind(3,y4), cbind(4,y4))
-plot_par_4(truth,est,xlabels = c("Liver", "Adipose", "Lung", "Stomach"),ylim=c(0,60),ylab="Enrichment", main="Enrichment")
+plot_par_4(truth,est,xlabels = c("Liver", "Adipose", "Lung", "Stomach"),ylim=c(0,80),ylab="Enrichment", main="Enrichment")
 ```
 
 ### PIP Calibration Plot of expression traits (filter out cs index 0)
