--- a/analysis/simulation_E_S_three_tissues_new.Rmd
+++ b/analysis/simulation_E_S_three_tissues_new.Rmd
@@ -22,15 +22,23 @@ source("/project/xinhe/shengqian/cTWAS_simulation/summarize_basic_plots.R")
 source("/project/xinhe/shengqian/cTWAS_simulation/summarize_ctwas_plots.R")
 source("/project2/xinhe/shengqian/cTWAS/cTWAS_analysis/analysis/simulation_help_functions.R")
 
-plot_PIP_csindex <- function(configtag, runtag,  simutags, ...){
+plot_PIP <- function(results_dir, runtag,  simutags, LD_type, ...){
    phenofs <- paste0(results_dir, runtag, "_simu", simutags, "-pheno.Rd")
-   susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_GTEXLD.finemap_regions.res.RDS")
+   susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_", LD_type, ".finemap_regions.res.RDS")
    f1 <- caliPIP_plot_csindex(phenofs, susieIfs, ...) 
    return(f1)
 }
-plot_PIP_combined_csindex <- function(configtag, runtag,  simutags, ...){
+
+plot_PIP_merged <- function(results_dir, runtag,  simutags, LD_type, ...){
    phenofs <- paste0(results_dir, runtag, "_simu", simutags, "-pheno.Rd")
-   susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_GTEXLD.finemap_regions.res.RDS")
+   susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_", LD_type,".finemap_merged_regions.res.RDS")
+   f1 <- caliPIP_plot_csindex(phenofs, susieIfs, ...) 
+   return(f1)
+}
+
+plot_PIP_combined <- function(configtag, runtag, simutags, LD_type, ...){
+   phenofs <- paste0(results_dir, runtag, "_simu", simutags, "-pheno.Rd")
+   susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_", LD_type, ".finemap_regions.res.RDS")
    f1 <- caliPIP_plot_E_S_combined_csindex(phenofs, susieIfs, ...) 
    return(f1)
 }
@@ -43,7 +51,7 @@ results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_E_S_three_t
 runtag = "E_S_three_tissues"
 simutags <- paste(1, 1:5, sep = "-")
 param_GTEX_df <- load_parameters(results_dir, runtag, simutags, "GTEXLD")
-param_UKBB_df <- load_parameters(results_dir, runtag, simutags, "UKBBLD")
+#param_UKBB_df <- load_parameters(results_dir, runtag, simutags, "UKBBLD")
 ```
 
 ### Number of causal genes detected (GTEX LD)
@@ -51,177 +59,44 @@ param_UKBB_df <- load_parameters(results_dir, runtag, simutags, "UKBBLD")
 check_n_detected_multi(results_dir, runtag, simutags, "GTEXLD", PIP_threshold = 0.8)
 ```
 
+### Estimated Prior Inclusion Probability and PVE (GTEX LD)
+`````{r, fig.width= 12, fig.height= 4, message=FALSE, warning=FALSE, echo=FALSE}
+par(mfrow = c(1, 3))
+y1 <- param_GTEX_df$`prior_eQTL|Liver`
+y2 <- param_GTEX_df$`prior_sQTL|Liver`
+y3 <- param_GTEX_df$`prior_eQTL|Adipose`
+y4 <- param_GTEX_df$`prior_sQTL|Adipose`
+y5 <- param_GTEX_df$`prior_eQTL|Lung`
+y6 <- param_GTEX_df$`prior_sQTL|Lung`
+truth <- rbind(c(1,0.009),c(2,0.009),c(3,0),c(4,0),c(3,0),c(4,0))
+est <- rbind(cbind(1,y1),cbind(2,y2),cbind(3,y4),cbind(4,y4),cbind(3,y4),cbind(4,y4))
+plot_par_6(truth,est,xlabels = c("Liver E", "Liver S", "Adipose E", "Adipose S", "Lung E", "Lung S"),ylim=c(0,0.025),ylab="Prior inclusion", main="Prior Inclusion Probability")
 
-### Estimated Prior Inclusion Probability
-```{r, fig.width= 4, fig.height= 5, message=FALSE, warning=FALSE, echo=FALSE}
-y1 <- results_df$prior_Liver_Expression
-y2 <- results_df$prior_Liver_Splicing
+y1 <- param_GTEX_df$`pve_eQTL|Liver`
+y2 <- param_GTEX_df$`pve_sQTL|Liver`
+y3 <- param_GTEX_df$`pve_eQTL|Adipose`
+y4 <- param_GTEX_df$`pve_sQTL|Adipose`
+y5 <- param_GTEX_df$`pve_eQTL|Lung`
+y6 <- param_GTEX_df$`pve_sQTL|Lung`
+truth <- rbind(c(1,0.03),c(2,0.03),c(3,0),c(4,0),c(3,0),c(4,0))
+est <- rbind(cbind(1,y1),cbind(2,y2),cbind(3,y4),cbind(4,y4),cbind(3,y4),cbind(4,y4))
+plot_par_6(truth,est,xlabels = c("Liver E", "Liver S", "Adipose E", "Adipose S", "Lung E", "Lung S"),ylim=c(0,0.06),ylab="PVE", main="PVE")
 
-truth <- rbind(c(1,0.009),c(2,0.009))
-est <- rbind(cbind(1,y1),cbind(2,y2))
-plot_par_2(truth,est,xlabels = c("Liver_E","Liver_S"),ylim=c(0,0.025),ylab="Prior inclusion")
+y1 <- param_GTEX_df$`enrichment_eQTL|Liver`
+y2 <- param_GTEX_df$`enrichment_sQTL|Liver`
+y3 <- param_GTEX_df$`enrichment_eQTL|Adipose`
+y4 <- param_GTEX_df$`enrichment_sQTL|Adipose`
+y5 <- param_GTEX_df$`enrichment_eQTL|Lung`
+y6 <- param_GTEX_df$`enrichment_sQTL|Lung`
+truth <- rbind(c(1,36),c(2,36),c(3,0),c(4,0),c(3,0),c(4,0))
+est <- rbind(cbind(1,y1),cbind(2,y2),cbind(3,y4),cbind(4,y4),cbind(3,y4),cbind(4,y4))
+plot_par_6(truth,est,xlabels = c("Liver E", "Liver S", "Adipose E", "Adipose S", "Lung E", "Lung S"),ylim=c(0,80),ylab="Enrichment", main="Enrichment")
 ```
 
-### Estimated PVE
-```{r, fig.width= 4, fig.height= 5, message=FALSE, warning=FALSE, echo=FALSE}
-y1 <- results_df$pve_Liver_Expression
-y2 <- results_df$pve_Liver_Splicing
-
-truth <- rbind(c(1,0.03),c(2,0.03))
-est <- rbind(cbind(1,y1),cbind(2,y2))
-plot_par_2(truth,est,xlabels = c("Liver_E","Liver_S"),ylim=c(0,0.1),ylab="PVE")
-```
-
-### Estimated Prior Variance
-```{r, fig.width= 4, fig.height= 5, message=FALSE, warning=FALSE, echo=FALSE}
-y1 <- results_df$prior_var_Liver_Expression
-y2 <- results_df$prior_var_Liver_Splicing
-
-t1 <- 0.03*sample_size/(group_size[2]*0.009)
-t2 <- 0.03*sample_size/(group_size[3]*0.009)
-
-truth <- rbind(c(1,t1),c(2,t2))
-est <- rbind(cbind(1,y1),cbind(2,y2))
-plot_par_2(truth,est,xlabels = c("Liver_E","Liver_S"),ylim=c(0,80),ylab=TeX("$sigma^2$"))
-```
-
-### Estimated Enrichment
-```{r, fig.width= 4, fig.height= 5, message=FALSE, warning=FALSE, echo=FALSE}
-y1 <- results_df$pve_Liver_Expression/results_df$prior_SNP
-y2 <- results_df$pve_Liver_Splicing/results_df$prior_SNP
-
-truth <- rbind(c(1,120),c(2,120))
-est <- rbind(cbind(1,y1),cbind(2,y2))
-plot_par_2(truth,est,xlabels = c("Liver_E","Liver_S"),ylim=c(0,300),ylab= TeX("Enrichment $\\pi_G/\\pi_V$"))
-```
-
-### PIP Calibration Plot based on UKBB LD (filter out cs index 0)
+### PIP Calibration Plot based on GTEX LD (filter out cs index 0)
 ```{r, fig.width= 8, fig.height= 4, echo=FALSE, warning=FALSE}
 load("/project2/xinhe/shengqian/cTWAS/cTWAS_analysis/data/mashr_sqtl/sqtl/mashr/intron_mapping.RData")
-f1 <- plot_PIP_csindex(results_dir, runtag, simutags, main = "no merged regions")
-f2 <- plot_PIP_combined_csindex(results_dir, runtag, simutags, main = "no merged regions")
-```
-
-### Simulation 2: Expression and Splicing traits from Liver are causal(3% PVE).  
-
-```{r echo=FALSE}
-results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_E_S_three_tissues/"
-runtag = "ukb-s80.45"
-configtag <- 1
-
-simutags <- paste(5, 1:5, sep = "-")
-thin <- 0.1
-
-sample_size <- 45000
-PIP_threshold <- 0.8
-
-results_df <- get_sim_joint_res(results_dir,runtag,configtag,simutags,thin,sample_size,PIP_threshold)
-group_size <- results_df[[2]]
-results_df <- results_df[[1]]
-```
-
-### Results using PIP Threshold
-```{r echo=FALSE}
-results_df[,c("simutag", "n_causal", "n_detected_pip", "n_detected_pip_in_causal")]
-#mean percent causal using combined PIP > 0.8
-sum(results_df$n_detected_pip_in_causal)/sum(results_df$n_detected_pip)
-```
-
-### Estimated Prior Inclusion Probability
-```{r, fig.width= 8, fig.height= 5, message=FALSE, warning=FALSE, echo=FALSE}
-y1 <- results_df$prior_Liver_Expression
-y2 <- results_df$prior_Liver_Splicing
-y3 <- results_df$prior_Lung_Expression
-y4 <- results_df$prior_Lung_Splicing
-y5 <- results_df$prior_Spleen_Expression
-y6 <- results_df$prior_Spleen_Splicing
-
-truth <- rbind(c(1,0.009),c(2,0.009),c(3,0),c(4,0),c(5,0),c(6,0))
-est <- rbind(cbind(1,y1),cbind(2,y2),cbind(3,y3),cbind(4,y4),cbind(5,y5),cbind(6,y6))
-plot_par_6(truth,est,xlabels = c("Liver_E","Liver_S","Lung_E","Lung_S","Spleen_E","Spleen_S"),ylim=c(0,0.025),ylab="Prior inclusion")
-```
-
-### Estimated PVE
-```{r, fig.width= 8, fig.height= 5, message=FALSE, warning=FALSE, echo=FALSE}
-y1 <- results_df$pve_Liver_Expression
-y2 <- results_df$pve_Liver_Splicing
-y3 <- results_df$pve_Lung_Expression
-y4 <- results_df$pve_Lung_Splicing
-y5 <- results_df$pve_Spleen_Expression
-y6 <- results_df$pve_Spleen_Splicing
-
-truth <- rbind(c(1,0.03),c(2,0.03),c(3,0),c(4,0),c(5,0),c(6,0))
-est <- rbind(cbind(1,y1),cbind(2,y2),cbind(3,y3),cbind(4,y4),cbind(5,y5),cbind(6,y6))
-plot_par_6(truth,est,xlabels = c("Liver_E","Liver_S","Lung_E","Lung_S","Spleen_E","Spleen_S"),ylim=c(0,0.06),ylab="PVE")
-```
-
-### Estimated Prior Variance
-```{r, fig.width= 8, fig.height= 5, message=FALSE, warning=FALSE, echo=FALSE}
-y1 <- results_df$prior_var_Liver_Expression
-y2 <- results_df$prior_var_Liver_Splicing
-y3 <- results_df$prior_var_Lung_Expression
-y4 <- results_df$prior_var_Lung_Splicing
-y5 <- results_df$prior_var_Spleen_Expression
-y6 <- results_df$prior_var_Spleen_Splicing
-
-t1 <- 0.03*sample_size/(group_size[2]*0.009)
-t2 <- 0.03*sample_size/(group_size[3]*0.009)
-t3 <- 0
-t4 <- 0
-t5 <- 0
-t6 <- 0
-
-truth <- rbind(c(1,t1),c(2,t2),c(3,t3),c(4,t4),c(5,t5),c(6,t6))
-est <- rbind(cbind(1,y1),cbind(2,y2),cbind(3,y3),cbind(4,y4),cbind(5,y5),cbind(6,y6))
-plot_par_6(truth,est,xlabels = c("Liver_E","Liver_S","Lung_E","Lung_S","Spleen_E","Spleen_S"),ylim=c(0,30),ylab=TeX("$sigma^2$"))
-```
-
-### Estimated Enrichment
-```{r, fig.width= 8, fig.height= 5, message=FALSE, warning=FALSE, echo=FALSE}
-y1 <- results_df$pve_Liver_Expression/results_df$prior_SNP
-y2 <- results_df$pve_Liver_Splicing/results_df$prior_SNP
-y3 <- results_df$pve_Lung_Expression/results_df$prior_SNP
-y4 <- results_df$pve_Lung_Splicing/results_df$prior_SNP
-y5 <- results_df$pve_Spleen_Expression/results_df$prior_SNP
-y6 <- results_df$pve_Spleen_Splicing/results_df$prior_SNP
-
-truth <- rbind(c(1,120),c(2,120),c(3,0),c(4,0),c(5,0),c(6,0))
-est <- rbind(cbind(1,y1),cbind(2,y2),cbind(3,y3),cbind(4,y4),cbind(5,y5),cbind(6,y6))
-plot_par_6(truth,est,xlabels = c("Liver_E","Liver_S","Lung_E","Lung_S","Spleen_E","Spleen_S"),ylim=c(0,250),ylab= TeX("Enrichment $\\pi_G/\\pi_V$"))
-```
-
-### PIP Calibration Plot
-```{r, fig.width= 8, fig.height= 4, echo=FALSE, warning=FALSE}
-load("/project2/xinhe/shengqian/cTWAS/cTWAS_analysis/data/mashr_sqtl/sqtl/mashr/intron_mapping.RData")
-f1 <- plot_PIP(configtag, runtag, simutags, main = "Expression Trait PIP Calibration")
-f2 <-  plot_PIP_combined(configtag, runtag, simutags, main = "Gene PIP Calibration")
-gridExtra::grid.arrange(f1, f2, ncol =2)
-```
-
-### PIP Calibration Plot (cs_index!=0)
-```{r, fig.width= 8, fig.height= 4, echo=FALSE, warning=FALSE}
-f1 <- plot_PIP_csindex(configtag, runtag, simutags, main = "Expression Trait PIP Calibration")
-f2 <-  plot_PIP_combined_csindex(configtag, runtag, simutags, main = "Gene PIP Calibration")
-gridExtra::grid.arrange(f1, f2, ncol =2)
-```
-
-### PIP Calibration Plot (L1=1)
-```{r, fig.width= 8, fig.height= 4, echo=FALSE, warning=FALSE}
-f1 <- plot_PIP_L1(configtag, runtag, simutags, main = "Expression Trait PIP Calibration")
-f2 <-  plot_PIP_L1_combined(configtag, runtag, simutags, main = "Gene PIP Calibration")
-gridExtra::grid.arrange(f1, f2, ncol =2)
-```
-
-### PIP Calibration Plot (True parameters)
-```{r, fig.width= 8, fig.height= 4, echo=FALSE, warning=FALSE}
-f1 <- plot_PIP_true(configtag, runtag, simutags, main = "Expression Trait PIP Calibration")
-f2 <-  plot_PIP_true_combined(configtag, runtag, simutags, main = "Gene PIP Calibration")
-gridExtra::grid.arrange(f1, f2, ncol =2)
-```
-
-### PIP Calibration Plot (True parameters, L=1)
-```{r, fig.width= 8, fig.height= 4, echo=FALSE, warning=FALSE}
-f1 <- plot_PIP_trueL1(configtag, runtag, simutags, main = "Expression Trait PIP Calibration")
-f2 <-  plot_PIP_trueL1_combined(configtag, runtag, simutags, main = "Gene PIP Calibration")
+f1 <- plot_PIP(results_dir, runtag, simutags, "GTEXLD", main = "molecular traits PIPs")
+f2 <- plot_PIP_combined(results_dir, runtag, simutags, "GTEXLD", main = "Gene level PIPs")
 gridExtra::grid.arrange(f1, f2, ncol =2)
 ```
