--- a/analysis/simulation_E_S_three_tissues_new.Rmd
+++ b/analysis/simulation_E_S_three_tissues_new.Rmd
@@ -7,12 +7,8 @@ editor_options:
   chunk_output_type: console
 ---
 
-A simulation of expression and splicing traits from three tissues is conducted to evaluate cTWAS performance (parameter estimation, PIP calibration ...). Three tissues used in this simulation are Liver, Lung, Spleen.
-
-It current has two setting:
-
-* One tissue case: 3% PVE, 0.9% $\pi$ for E and S from Liver and 30% PVE, 2.5e-4 $\pi$ for SNP.
-* 3% PVE, 0.9% $\pi$ for Liver E and Liver S. 0% PVE, 0% $\pi$ for the others and 30% PVE, 2.5e-4 $\pi$ for SNP.
+A simulation of expression and splicing traits from three tissues is conducted to evaluate cTWAS performance (parameter estimation, PIP calibration ...). Three tissues used in this simulation are Liver, Adipose and Lung. 
+Only expression and splicing from liver are causal, each with 3% PVE, 0.9% $\pi$. SNPs have 30% PVE, 2.5e-4 $\pi$.
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE}
 library(ctwas)
