--- a/analysis/simulation_E_S_three_tissues_new.Rmd
+++ b/analysis/simulation_E_S_three_tissues_new.Rmd
@@ -47,7 +47,7 @@ results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_E_S_three_t
 runtag = "E_S_three_tissues"
 simutags <- paste(1, 1:5, sep = "-")
 param_GTEX_df <- load_parameters(results_dir, runtag, simutags, "GTEXLD")
-#param_UKBB_df <- load_parameters(results_dir, runtag, simutags, "UKBBLD")
+param_UKBB_df <- load_parameters(results_dir, runtag, simutags, "UKBBLD")
 ```
 
 ### Number of causal genes detected (GTEX LD)
@@ -65,7 +65,7 @@ y4 <- param_GTEX_df$`prior_sQTL|Adipose`
 y5 <- param_GTEX_df$`prior_eQTL|Lung`
 y6 <- param_GTEX_df$`prior_sQTL|Lung`
 truth <- rbind(c(1,0.009),c(2,0.009),c(3,0),c(4,0),c(3,0),c(4,0))
-est <- rbind(cbind(1,y1),cbind(2,y2),cbind(3,y4),cbind(4,y4),cbind(3,y4),cbind(4,y4))
+est <- rbind(cbind(1,y1),cbind(2,y2),cbind(3,y3),cbind(4,y4),cbind(5,y5),cbind(6,y6))
 plot_par_6(truth,est,xlabels = c("Liver E", "Liver S", "Adipose E", "Adipose S", "Lung E", "Lung S"),ylim=c(0,0.025),ylab="Prior inclusion", main="Prior Inclusion Probability")
 
 y1 <- param_GTEX_df$`pve_eQTL|Liver`
@@ -75,7 +75,7 @@ y4 <- param_GTEX_df$`pve_sQTL|Adipose`
 y5 <- param_GTEX_df$`pve_eQTL|Lung`
 y6 <- param_GTEX_df$`pve_sQTL|Lung`
 truth <- rbind(c(1,0.03),c(2,0.03),c(3,0),c(4,0),c(3,0),c(4,0))
-est <- rbind(cbind(1,y1),cbind(2,y2),cbind(3,y4),cbind(4,y4),cbind(3,y4),cbind(4,y4))
+est <- rbind(cbind(1,y1),cbind(2,y2),cbind(3,y3),cbind(4,y4),cbind(5,y5),cbind(6,y6))
 plot_par_6(truth,est,xlabels = c("Liver E", "Liver S", "Adipose E", "Adipose S", "Lung E", "Lung S"),ylim=c(0,0.06),ylab="PVE", main="PVE")
 
 y1 <- param_GTEX_df$`enrichment_eQTL|Liver`
@@ -85,7 +85,41 @@ y4 <- param_GTEX_df$`enrichment_sQTL|Adipose`
 y5 <- param_GTEX_df$`enrichment_eQTL|Lung`
 y6 <- param_GTEX_df$`enrichment_sQTL|Lung`
 truth <- rbind(c(1,36),c(2,36),c(3,0),c(4,0),c(3,0),c(4,0))
-est <- rbind(cbind(1,y1),cbind(2,y2),cbind(3,y4),cbind(4,y4),cbind(3,y4),cbind(4,y4))
+est <- rbind(cbind(1,y1),cbind(2,y2),cbind(3,y3),cbind(4,y4),cbind(5,y5),cbind(6,y6))
+plot_par_6(truth,est,xlabels = c("Liver E", "Liver S", "Adipose E", "Adipose S", "Lung E", "Lung S"),ylim=c(0,80),ylab="Enrichment", main="Enrichment")
+```
+
+### Estimated Prior Inclusion Probability and PVE (UKBB LD)
+`````{r, fig.width= 12, fig.height= 4, message=FALSE, warning=FALSE, echo=FALSE}
+par(mfrow = c(1, 3))
+y1 <- param_UKBB_df$`prior_eQTL|Liver`
+y2 <- param_UKBB_df$`prior_sQTL|Liver`
+y3 <- param_UKBB_df$`prior_eQTL|Adipose`
+y4 <- param_UKBB_df$`prior_sQTL|Adipose`
+y5 <- param_UKBB_df$`prior_eQTL|Lung`
+y6 <- param_UKBB_df$`prior_sQTL|Lung`
+truth <- rbind(c(1,0.009),c(2,0.009),c(3,0),c(4,0),c(3,0),c(4,0))
+est <- rbind(cbind(1,y1),cbind(2,y2),cbind(3,y3),cbind(4,y4),cbind(5,y5),cbind(6,y6))
+plot_par_6(truth,est,xlabels = c("Liver E", "Liver S", "Adipose E", "Adipose S", "Lung E", "Lung S"),ylim=c(0,0.025),ylab="Prior inclusion", main="Prior Inclusion Probability")
+
+y1 <- param_UKBB_df$`pve_eQTL|Liver`
+y2 <- param_UKBB_df$`pve_sQTL|Liver`
+y3 <- param_UKBB_df$`pve_eQTL|Adipose`
+y4 <- param_UKBB_df$`pve_sQTL|Adipose`
+y5 <- param_UKBB_df$`pve_eQTL|Lung`
+y6 <- param_UKBB_df$`pve_sQTL|Lung`
+truth <- rbind(c(1,0.03),c(2,0.03),c(3,0),c(4,0),c(3,0),c(4,0))
+est <- rbind(cbind(1,y1),cbind(2,y2),cbind(3,y3),cbind(4,y4),cbind(5,y5),cbind(6,y6))
+plot_par_6(truth,est,xlabels = c("Liver E", "Liver S", "Adipose E", "Adipose S", "Lung E", "Lung S"),ylim=c(0,0.06),ylab="PVE", main="PVE")
+
+y1 <- param_UKBB_df$`enrichment_eQTL|Liver`
+y2 <- param_UKBB_df$`enrichment_sQTL|Liver`
+y3 <- param_UKBB_df$`enrichment_eQTL|Adipose`
+y4 <- param_UKBB_df$`enrichment_sQTL|Adipose`
+y5 <- param_UKBB_df$`enrichment_eQTL|Lung`
+y6 <- param_UKBB_df$`enrichment_sQTL|Lung`
+truth <- rbind(c(1,36),c(2,36),c(3,0),c(4,0),c(3,0),c(4,0))
+est <- rbind(cbind(1,y1),cbind(2,y2),cbind(3,y3),cbind(4,y4),cbind(5,y5),cbind(6,y6))
 plot_par_6(truth,est,xlabels = c("Liver E", "Liver S", "Adipose E", "Adipose S", "Lung E", "Lung S"),ylim=c(0,80),ylab="Enrichment", main="Enrichment")
 ```
 
