--- a/analysis/simulation_E_S_three_tissues_new.Rmd
+++ b/analysis/simulation_E_S_three_tissues_new.Rmd
@@ -38,6 +38,13 @@ plot_PIP_combined <- function(configtag, runtag, simutags, LD_type, ...){
    f1 <- caliPIP_plot_E_S_combined_csindex(phenofs, susieIfs, ...) 
    return(f1)
 }
+
+plot_PIP_combined_merged <- function(configtag, runtag, simutags, LD_type, ...){
+   phenofs <- paste0(results_dir, runtag, "_simu", simutags, "-pheno.Rd")
+   susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_", LD_type, ".finemap_merged_regions.res.RDS")
+   f1 <- caliPIP_plot_E_S_combined_csindex(phenofs, susieIfs, ...) 
+   return(f1)
+}
 ```
 
 ### Simulation 1: Expression and Splicing from Liver (3% PVE)
@@ -55,8 +62,13 @@ param_UKBB_df <- load_parameters(results_dir, runtag, simutags, "UKBBLD")
 check_n_detected_multi(results_dir, runtag, simutags, "GTEXLD", PIP_threshold = 0.8)
 ```
 
+### Number of causal genes detected (UKBB LD)
+```{r echo=FALSE}
+check_n_detected_multi(results_dir, runtag, simutags, "UKBBLD", PIP_threshold = 0.8)
+```
+
 ### Estimated Prior Inclusion Probability and PVE (GTEX LD)
-`````{r, fig.width= 12, fig.height= 4, message=FALSE, warning=FALSE, echo=FALSE}
+`````{r, fig.width= 15, fig.height= 4, message=FALSE, warning=FALSE, echo=FALSE}
 par(mfrow = c(1, 3))
 y1 <- param_GTEX_df$`prior_eQTL|Liver`
 y2 <- param_GTEX_df$`prior_sQTL|Liver`
@@ -64,7 +76,7 @@ y3 <- param_GTEX_df$`prior_eQTL|Adipose`
 y4 <- param_GTEX_df$`prior_sQTL|Adipose`
 y5 <- param_GTEX_df$`prior_eQTL|Lung`
 y6 <- param_GTEX_df$`prior_sQTL|Lung`
-truth <- rbind(c(1,0.009),c(2,0.009),c(3,0),c(4,0),c(3,0),c(4,0))
+truth <- rbind(c(1,0.009),c(2,0.009),c(3,0),c(4,0),c(5,0),c(6,0))
 est <- rbind(cbind(1,y1),cbind(2,y2),cbind(3,y3),cbind(4,y4),cbind(5,y5),cbind(6,y6))
 plot_par_6(truth,est,xlabels = c("Liver E", "Liver S", "Adipose E", "Adipose S", "Lung E", "Lung S"),ylim=c(0,0.025),ylab="Prior inclusion", main="Prior Inclusion Probability")
 
@@ -74,7 +86,7 @@ y3 <- param_GTEX_df$`pve_eQTL|Adipose`
 y4 <- param_GTEX_df$`pve_sQTL|Adipose`
 y5 <- param_GTEX_df$`pve_eQTL|Lung`
 y6 <- param_GTEX_df$`pve_sQTL|Lung`
-truth <- rbind(c(1,0.03),c(2,0.03),c(3,0),c(4,0),c(3,0),c(4,0))
+truth <- rbind(c(1,0.03),c(2,0.03),c(3,0),c(4,0),c(5,0),c(6,0))
 est <- rbind(cbind(1,y1),cbind(2,y2),cbind(3,y3),cbind(4,y4),cbind(5,y5),cbind(6,y6))
 plot_par_6(truth,est,xlabels = c("Liver E", "Liver S", "Adipose E", "Adipose S", "Lung E", "Lung S"),ylim=c(0,0.06),ylab="PVE", main="PVE")
 
@@ -84,13 +96,13 @@ y3 <- param_GTEX_df$`enrichment_eQTL|Adipose`
 y4 <- param_GTEX_df$`enrichment_sQTL|Adipose`
 y5 <- param_GTEX_df$`enrichment_eQTL|Lung`
 y6 <- param_GTEX_df$`enrichment_sQTL|Lung`
-truth <- rbind(c(1,36),c(2,36),c(3,0),c(4,0),c(3,0),c(4,0))
+truth <- rbind(c(1,36),c(2,36),c(3,0),c(4,0),c(5,0),c(6,0))
 est <- rbind(cbind(1,y1),cbind(2,y2),cbind(3,y3),cbind(4,y4),cbind(5,y5),cbind(6,y6))
 plot_par_6(truth,est,xlabels = c("Liver E", "Liver S", "Adipose E", "Adipose S", "Lung E", "Lung S"),ylim=c(0,80),ylab="Enrichment", main="Enrichment")
 ```
 
 ### Estimated Prior Inclusion Probability and PVE (UKBB LD)
-`````{r, fig.width= 12, fig.height= 4, message=FALSE, warning=FALSE, echo=FALSE}
+`````{r, fig.width= 15, fig.height= 4, message=FALSE, warning=FALSE, echo=FALSE}
 par(mfrow = c(1, 3))
 y1 <- param_UKBB_df$`prior_eQTL|Liver`
 y2 <- param_UKBB_df$`prior_sQTL|Liver`
@@ -98,7 +110,7 @@ y3 <- param_UKBB_df$`prior_eQTL|Adipose`
 y4 <- param_UKBB_df$`prior_sQTL|Adipose`
 y5 <- param_UKBB_df$`prior_eQTL|Lung`
 y6 <- param_UKBB_df$`prior_sQTL|Lung`
-truth <- rbind(c(1,0.009),c(2,0.009),c(3,0),c(4,0),c(3,0),c(4,0))
+truth <- rbind(c(1,0.009),c(2,0.009),c(3,0),c(4,0),c(5,0),c(6,0))
 est <- rbind(cbind(1,y1),cbind(2,y2),cbind(3,y3),cbind(4,y4),cbind(5,y5),cbind(6,y6))
 plot_par_6(truth,est,xlabels = c("Liver E", "Liver S", "Adipose E", "Adipose S", "Lung E", "Lung S"),ylim=c(0,0.025),ylab="Prior inclusion", main="Prior Inclusion Probability")
 
@@ -108,7 +120,7 @@ y3 <- param_UKBB_df$`pve_eQTL|Adipose`
 y4 <- param_UKBB_df$`pve_sQTL|Adipose`
 y5 <- param_UKBB_df$`pve_eQTL|Lung`
 y6 <- param_UKBB_df$`pve_sQTL|Lung`
-truth <- rbind(c(1,0.03),c(2,0.03),c(3,0),c(4,0),c(3,0),c(4,0))
+truth <- rbind(c(1,0.03),c(2,0.03),c(3,0),c(4,0),c(5,0),c(6,0))
 est <- rbind(cbind(1,y1),cbind(2,y2),cbind(3,y3),cbind(4,y4),cbind(5,y5),cbind(6,y6))
 plot_par_6(truth,est,xlabels = c("Liver E", "Liver S", "Adipose E", "Adipose S", "Lung E", "Lung S"),ylim=c(0,0.06),ylab="PVE", main="PVE")
 
@@ -118,7 +130,7 @@ y3 <- param_UKBB_df$`enrichment_eQTL|Adipose`
 y4 <- param_UKBB_df$`enrichment_sQTL|Adipose`
 y5 <- param_UKBB_df$`enrichment_eQTL|Lung`
 y6 <- param_UKBB_df$`enrichment_sQTL|Lung`
-truth <- rbind(c(1,36),c(2,36),c(3,0),c(4,0),c(3,0),c(4,0))
+truth <- rbind(c(1,36),c(2,36),c(3,0),c(4,0),c(5,0),c(6,0))
 est <- rbind(cbind(1,y1),cbind(2,y2),cbind(3,y3),cbind(4,y4),cbind(5,y5),cbind(6,y6))
 plot_par_6(truth,est,xlabels = c("Liver E", "Liver S", "Adipose E", "Adipose S", "Lung E", "Lung S"),ylim=c(0,80),ylab="Enrichment", main="Enrichment")
 ```
@@ -128,5 +140,33 @@ plot_par_6(truth,est,xlabels = c("Liver E", "Liver S", "Adipose E", "Adipose S",
 load("/project2/xinhe/shengqian/cTWAS/cTWAS_analysis/data/mashr_sqtl/sqtl/mashr/intron_mapping.RData")
 f1 <- plot_PIP(results_dir, runtag, simutags, "GTEXLD", main = "molecular traits PIPs")
 f2 <- plot_PIP_combined(results_dir, runtag, simutags, "GTEXLD", main = "Gene level PIPs")
-gridExtra::grid.arrange(f1, f2, ncol =2)
+gridExtra::grid.arrange(f1, f2, ncol=2)
+```
+
+### PIP Calibration Plot of expression traits (filter out cs index 0)
+```{r, fig.width= 8, fig.height= 4, echo=FALSE, warning=FALSE}
+f1 <- plot_PIP(results_dir, runtag, simutags, "GTEXLD", main = "GTEX LD")
+f2 <- plot_PIP(results_dir, runtag, simutags, "UKBBLD", main = "UKBB LD")
+gridExtra::grid.arrange(f1, f2, ncol=2)
+```
+
+### PIP Calibration Plot of expression traits with region merge (filter out cs index 0)
+```{r, fig.width= 8, fig.height= 4, echo=FALSE, warning=FALSE}
+f1 <- plot_PIP_merged(results_dir, runtag, simutags, "GTEXLD", main = "GTEX LD")
+f2 <- plot_PIP_merged(results_dir, runtag, simutags, "UKBBLD", main = "UKBB LD")
+gridExtra::grid.arrange(f1, f2, ncol=2)
+```
+
+### PIP Calibration Plot of gene level PIP (filter out cs index 0)
+```{r, fig.width= 8, fig.height= 4, echo=FALSE, warning=FALSE}
+f1 <- plot_PIP_combined(results_dir, runtag, simutags, "GTEXLD", main = "GTEX LD")
+f2 <- plot_PIP_combined(results_dir, runtag, simutags, "UKBBLD", main = "UKBB LD")
+gridExtra::grid.arrange(f1, f2, ncol=2)
+```
+
+### PIP Calibration Plot of gene level PIP with region merge (filter out cs index 0)
+```{r, fig.width= 8, fig.height= 4, echo=FALSE, warning=FALSE}
+f1 <- plot_PIP_combined_merged(results_dir, runtag, simutags, "GTEXLD", main = "GTEX LD")
+f2 <- plot_PIP_combined_merged(results_dir, runtag, simutags, "UKBBLD", main = "UKBB LD")
+gridExtra::grid.arrange(f1, f2, ncol=2)
 ```
