--- a/analysis/apa_weights_analysis_chenetal.Rmd
+++ b/analysis/apa_weights_analysis_chenetal.Rmd
@@ -8,6 +8,11 @@ output:
     toc: true
 ---
 
+```{r message=FALSE}
+library(ctwas)
+
+```
+
 # Data Overview
 
 The paper: https://www.nature.com/articles/s41467-024-46064-7#Sec2
@@ -44,15 +49,26 @@ DT::datatable(wgt.matrix[1:10,],caption = htmltools::tags$caption(style = 'capti
 ## Settings 
 
 - Fusion Model: enet model, all SNPs with non-zero weights
+- thin = 0.1,
+- niter_prefit = 3
+- niter = 30
+- L = 5
+- group_prior_var_structure = "independent"
+- maxSNP = 20000
+- min_nonSNP_PIP = 0.5
 
 ## Results summary 
 
 ```{r}
 load("/project/xinhe/xsun/multi_group_ctwas/3.apa_testing/summary/para_pip08.rdata")
-
+colnames(para_sum)[ncol(para_sum)] <- "%ofpve"
 DT::datatable(para_sum,caption = htmltools::tags$caption(style = 'caption-side: left; text-align: left; color:black; font-size:150%;','parameter estimation'),options = list(pageLength = 5))
+```
 
+locuz zoom plots for the high pip protein coding genes. https://uchicago.box.com/s/aggcmul216qenr17akysgkokxu1xj2ec
+
+```{r}
 load("/project/xinhe/xsun/multi_group_ctwas/3.apa_testing/summary/genedetails_cs_pip08.rdata")
 
-DT::datatable(gene_table_cut_cs,caption = htmltools::tags$caption(style = 'caption-side: left; text-align: left; color:black; font-size:150%;','genes with pip > 0.8 & in credible sets'),options = list(pageLength = 5))
+DT::datatable(gene_table_cut_cs,caption = htmltools::tags$caption(style = 'caption-side: left; text-align: left; color:black; font-size:150%;','genes with pip > 0.8 & in credible sets (the genes whose pos column is na are not protein-coding genes)'),options = list(pageLength = 5))
 ```
