--- a/analysis/four_expression_traits_simulations.Rmd
+++ b/analysis/four_expression_traits_simulations.Rmd
@@ -127,7 +127,7 @@ plot_par_4(truth,est,xlabels = c("Liver", "Adipose", "Lung", "Stomach"),ylim=c(0
 pip_partition_across_tissue(results_dir, runtag, simutags, "GTEXLD", PIP_threshold = 0.8)
 ```
 
-### PIP attribution among tissues (GTEXLD)
+### PIP attribution among tissues (UKBBLD)
 ```{r, echo=FALSE, fig.width= 5, fig.height= 4, warning=FALSE}
 pip_partition_across_tissue(results_dir, runtag, simutags, "UKBBLD", PIP_threshold = 0.8)
 ```
